Trying to fix word-spacing

--- a/style.css
+++ b/style.css
@@ -6,24 +6,9 @@ body{
      font-family: sans-serif; 
 }
 
-#index{
-     background: black URL(imgs/better.jpg) 
-     no-repeat;
-     background-attachment: fixed;
-     background-position: center;
-     background-size: cover;
-}
-
-#main{
-      word-spacing: 120px;
-      font-size: x-large;
-      font-weight: bold; 
-      text-align: center;
-      color: #33FF33;
-}
 
 #main1{
-      word-spacing: 120px;      
+      word-spacing: 50%;      
       text-align: center; 
       color: white; 
       background: #343434;
@@ -78,33 +63,26 @@ body{
 
 
 .uvod-background {
-                 background-image: URL(imgs/1.png); 
-                 
-                /* background-attachment: fixed;*/
-                  
+                 background-image: URL(imgs/1.png);                  
+                 /*background-attachment: fixed;*/                  
                    background-repeat: no-repeat; 
+                   width: 100%;
 }
 
 
 .akce-background {
-                 background-image: URL(imgs/2.png);
-                    
-                    
+                 background-image: URL(imgs/2.png);                                        
                      background-repeat: no-repeat;
 }
 
 .galerie-background {
-                     background-image: URL(imgs/3.png);
-                      
-                    
+                     background-image: URL(imgs/3.png);                                          
                      background-repeat: no-repeat;
                      
 }
 
 .kontakt-background {
-                    background-image: URL(imgs/4.png);
-                      
-                  
+                    background-image: URL(imgs/4.png);                                       
                      background-repeat: no-repeat;
                     
 }
